Добавлена возможность добавлять новых администраторов из Админ-панели